--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 5px;
+  background-color: #F9FBFF;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.alert {
+  width: 100%;
+  padding: 5px;
+  color: white;
+  font-weight: 700;
+  border-radius: 2px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: capitalize;
+  font-size: small;
+}
+.icon {
+  cursor: pointer;
+  font-size: medium;
+}
+.alert-error {
+  background-color: red;
+}
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 0;
+}
+
+.error {
+  color: red;
+  text-transform: capitalize;
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
+.input {
+  width: 80%;
+  height: 20px;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 2px;
+  border: hidden;
+  background-color: rgba(26, 26, 26, 0.04);
+}
+
+.input-md {
+  width: 50%;
+}
+
+.input:focus {
+  border: hidden;
+}
+
+.button {
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+
+.button-primary {
+  background-color: #0055FF;
+}
+
+.button-danger {
+  background-color: red;
+}
+.button-lg {
+  width: 80%;
+  height: 35px;
+  font-size: larger;
+}
+
+button-small {
+  width: 30%;
+}
+
+.link {
+  color: gray;
+}
+
+.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.heading h1 { 
+  margin: 0;
+}
+
+.heading  {
+  margin: 0;
+}
+
